@@ -3,6 +3,7 @@ v1.4.6 "fiat lux":
  - Fix issue where 3hs would display a black screen at boot in some cases
  - Fix issue where 3hs would crash the system if the HOME button was pressed during an installation
  - Add a confirmation menu when a language is automatically detected that's not English
+ - Unify all search modes into one menu
  - Add new simplified error screen
 
 v1.4.5 "fiat lux":
